# CantStopMe

./: .gitignore  LICENSE  README.md  SECURITY.md  USAGE.md  cantstopme.py  pyproject.toml
blacklist_pool/: README.md  SOURCES.md  pool.yaml
cantstopme/: __init__.py  __main__.py  paths.py
cantstopme/cli/: main.py
cantstopme/engine/: __init__.py  blacklist.py  command_alternatives.py  constants.py  coverage.py  obfuscator.py  rules.py  terminal_style.py  transforms.py  variant_engine.py
docs/blue/: hardening.md
examples/: PHP_PING_LAB.md  cat_blocked.txt  dollar_blocked.txt  lab_subset.txt  ls_blocked.txt  php_ping_filter.txt  slash_blocked.txt  slash_only.txt
rules/: README.md  advanced.yaml  alternatives.yaml  encoding.yaml  keywords.yaml  separators.yaml  slashes.yaml  whitespace.yaml
